refactor: replace GitHub Actions expressions with environment variables in `action.yml` and test workflows

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -41,10 +41,11 @@ jobs:
         shell: bash
         run: |
           set +e
-          cache_ids=$(gh cache list --key=${{ github.run_id }} --json id --jq '.[].id')
+          cache_ids=$(gh cache list --key="$CACHE_KEY_PREFIX" --json id --jq '.[].id')
           for cache_id in $cache_ids; do
             gh cache delete $cache_id
           done
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           GH_REPO: ${{ github.repository }}
+          CACHE_KEY_PREFIX: ${{ github.run_id }}
