feat: add support for Windows runners

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,19 @@ jobs:
       matrix:
         runs-on: [ubuntu-24.04, ubuntu-22.04, ubuntu-20.04, macos-15, macos-14, macos-13]
         git-version: ["2.23.0", "2.43.6"]
+        include:
+          - runs-on: windows-2025
+            git-version: 2.23.0.windows.1
+          - runs-on: windows-2025
+            git-version: 2.44.0.windows.1
+          - runs-on: windows-2022
+            git-version: 2.23.0.windows.1
+          - runs-on: windows-2022
+            git-version: 2.44.0.windows.1
+          - runs-on: windows-2019
+            git-version: 2.23.0.windows.1
+          - runs-on: windows-2019
+            git-version: 2.44.0.windows.1
     name: "Run tests on ${{ matrix.runs-on }} with Git v${{ matrix.git-version }}"
     runs-on: ${{ matrix.runs-on }}
     steps:
