ci: always run `clear-cache` job in `run-tests` workflow

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,6 +33,7 @@ jobs:
       cache-key-prefix: ${{ github.run_id }}
   clear-cache:
     name: Clear cache
+    if: always()
     needs: [tests, cache-tests]
     runs-on: ubuntu-latest
     steps:
