--- a/.github/workflows/run-extended-tests.yml
+++ b/.github/workflows/run-extended-tests.yml
@@ -17,9 +17,13 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        runs-on: [ubuntu-24.04, ubuntu-22.04, ubuntu-20.04, macos-15, macos-14, macos-13]
+        runs-on: [ubuntu-24.04, ubuntu-24.04-arm, ubuntu-22.04, ubuntu-22.04-arm, ubuntu-20.04, macos-15, macos-14, macos-13]
         git-version: ["2.23.0", "2.43.6"]
         include:
+          - runs-on: windows-2025
+            git-version: 2.23.0.windows.1
+          - runs-on: windows-2025
+            git-version: 2.44.0.windows.1
           - runs-on: windows-2022
             git-version: 2.23.0.windows.1
           - runs-on: windows-2022
